--- a/less/index.less
+++ b/less/index.less
@@ -57,3 +57,42 @@ html, body {
 	height: 100%;
 }
 
+h1, h2, h3, h4, h5 {
+    font-family: @libre-franklin
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+// Variables
+@cornflower-blue: #6195ED;
+@libre-franklin: 'Libre Franklin', sans-serif;
+
+
+
+// Mix-ins
+
+.center() {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+  
+
+.mt20() {
+	margin-top: 20px;
+  }
+  
+
+
+
+
+// styling
+
+.container {
+    width: 880px;
+    margin: auto;
+}
+
+
+
+
