added div for top

--- a/css/index.css
+++ b/css/index.css
@@ -141,9 +141,11 @@ h4,
 h5 {
   font-family: 'Libre Franklin', sans-serif;
   letter-spacing: 1px;
-  margin-bottom: 15px;
 }
 .container {
   width: 880px;
   margin: auto;
+}
+.top-box {
+  background-color: grey;
 }
