--- a/less/index.less
+++ b/less/index.less
@@ -57,15 +57,15 @@ html, body {
 	height: 100%;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: @libre-franklin
-    letter-spacing: 1px;
-    margin-bottom: 15px;
-}
-
 // Variables
 @cornflower-blue: #6195ED;
 @libre-franklin: 'Libre Franklin', sans-serif;
+
+
+h1, h2, h3, h4, h5 {
+    font-family: @libre-franklin;
+    letter-spacing: 1px;
+}
 
 
 
@@ -78,13 +78,6 @@ h1, h2, h3, h4, h5 {
 }
   
 
-.mt20() {
-	margin-top: 20px;
-  }
-  
-
-
-
 
 // styling
 
@@ -93,6 +86,8 @@ h1, h2, h3, h4, h5 {
     margin: auto;
 }
 
-
+.top-box {
+	background-color: grey;
+}
 
 
